# side_project

./: .gitignore  README.md  example_인지세추가.json  pyproject.toml
outputs/k_bank/: kbank_loans_structured_20250920_0007.json  kbank_products.json
outputs/shinhan/: shinhan_housing_loans_20250917_0313.json  shinhan_housing_loans_20250920_0747.json
