[project]
name = "side-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
    "selectolax>=0.3.34",
    "selenium>=4.35.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]
